banner z-index fix

--- a/app/scss/common/_header.scss
+++ b/app/scss/common/_header.scss
@@ -132,7 +132,7 @@
   left: 0;
   width: 100%;
   background-image: url('/static/images/background/header-promo.jpg');
-  z-index: 999;
+  z-index: 5;
   cursor: default;
   -webkit-user-select: none;
   -moz-user-select: none;
